test/T3/Fail/WrongMainSig2.ic

class A
{
	int x;
}

class B
{
	static void main(string[] arg)
	{
		Library.println("hello");
	}
}